--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,4 @@
 # ======================
 # 1. API
 # ======================
-REACT_API_BASE_URL=http://localhost:8000/api
+REACT_APP_API_BASE_URL=http://localhost:8000/api
