--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^6.30.1",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
-    "yup": "^1.0.0"
+    "yup": "^1.0.0",
+    "crypto-js": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
