--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.5",
+    "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -13,8 +14,7 @@
     "react-router-dom": "^6.30.1",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
-    "yup": "^1.0.0",
-    "crypto-js": "^4.1.1"
+    "yup": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +44,15 @@
   },
   "proxy": "http://localhost:8000",
   "devDependencies": {
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "babel-jest": "^30.0.5",
+    "jest-module-name-mapper": "^0.1.5",
     "react-dropzone": "^14.3.8",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "redux-mock-store": "^1.5.5"
   }
 }
