--- a/nginx.conf
+++ b/nginx.conf
@@ -1,40 +1,38 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
+    server_tokens off;
+    client_max_body_size 20M;
 
+    # Корневая директория фронтенда
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
-    location /api/ {
+    # Проксирование API и админки
+    location ~ ^/(api|admin) {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Cookie $http_cookie;  # Передаём куки
+        proxy_redirect off;
     }
 
-    location /webhooks/github {
-        # Ограничиваем доступ только для GitHub IP-адресов
-        allow 192.30.252.0/22;
-        allow 185.199.108.0/22;
-        allow 140.82.112.0/20;
-        allow 143.55.64.0/20;
-        deny all;
-
-        # Перенаправляем запрос в наш скрипт
-        proxy_pass http://localhost:8000/webhooks/github;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    # Статика Django (если используется Nginx для раздачи)
+    location /django_static/ {
+        alias /app/backend/static/;  # Путь должен совпадать с STATIC_ROOT в Django
+        expires 30d;
+        access_log off;
     }
 
-    # Обработка ошибок
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+    # Медиа-файлы (если нужны)
+    location /media/ {
+        alias /app/backend/media/;  # Путь должен совпадать с MEDIA_ROOT в Django
+        expires 30d;
+        access_log off;
     }
 }
